--- a/etc/config.properties
+++ b/etc/config.properties
@@ -1,13 +1,14 @@
 coordinator=true
 node-scheduler.include-coordinator=true
 http-server.http.port=8080
-discovery.uri=https://trino-coordinator:8443
+discovery.uri=https://trino-coordinator:9043
 # enable authen password
 http-server.process-forwarded=true
 http-server.authentication.type=PASSWORD
 password-authenticator.config-files=${ENV:TRINO_HOME}/password-authenticator.properties
 http-server.https.enabled=true
-http-server.https.port=8443
+http-server.https.port=9043
+discovery-server.enabled=true
 #http-server.https.keystore.path=${ENV:TRINO_HOME}/private_key.pem
 internal-communication.shared-secret=ABCXYZ123
 internal-communication.https.required=true
