--- a/etc/catalog/postgres.properties
+++ b/etc/catalog/postgres.properties
@@ -1,4 +1,4 @@
 connector.name=postgresql
-connection-url=jdbc:postgresql://172.18.0.3:5432/trino_test
+connection-url=jdbc:postgresql://10.96.20.57:5432/trino_test?socketTimeout=100000
 connection-user=postgres
 connection-password=postgres
